--- a/app/src/main/res/layout/modelo_desenhos.xml
+++ b/app/src/main/res/layout/modelo_desenhos.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/idCardDesenhos"
+    android:id="@+id/idCardJogadoras"
     android:layout_width="190dp"
     android:layout_height="260dp"
     android:clickable="true"
@@ -15,21 +15,21 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/idImgDesenhos"
+            android:id="@+id/idImgJogadoras"
             android:layout_width="180dp"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/doismilesessetnaesete">
+            android:src="@drawable/leticiabr">
 
         </ImageView>
 
         <TextView
-            android:id="@+id/idTituloDesenhos"
+            android:id="@+id/idNomedaJogadora"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10sp"
-            android:text="2067"
+            android:text="Leticia"
             android:textColor="#000"
             android:textSize="15sp"
             android:textStyle="bold" />
