lista de jogadoras br

--- a/app/src/main/res/layout/modelo_desenhos.xml
+++ b/app/src/main/res/layout/modelo_desenhos.xml
@@ -24,7 +24,7 @@
         </ImageView>
 
         <TextView
-            android:id="@+id/idNomedaJogadora"
+            android:id="@+id/idNomeJogadora"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
